# IRCA-Analysis-System

./: Cargo.toml  README.md  irca_db.duckdb  irca_results_db.duckdb
src/: main.rs
